apps/webhook_router/src/adapters/snapshots/webhook_router__adapters__lark__tests__adapters_lark_ingress_text.snap
---
source: apps/webhook_router/src/adapters/lark.rs
expression: "json!({\n    \"id\": event.id, \"source\": event.source, \"timestamp\": event.timestamp,\n    \"title\": event.title, \"markdown\": event.markdown, \"meta\": event.meta,\n    \"raw\": event.raw,\n})"
---
id: evt-1
markdown: hi
meta:
  chat_id: ~
  message_type: text
  sender: ~
raw:
  event:
    message:
      content: "{\"text\":\"hi\"}"
      message_type: text
  header:
    event_id: evt-1
    event_time: "1700000000000"
source: lark
timestamp: 1700000000
title: ~
