apps/webhook_router/src/adapters/snapshots/webhook_router__adapters__lark__tests__adapters_lark_uem_to_egress_with_title.snap
---
source: apps/webhook_router/src/adapters/lark.rs
expression: "json!({ \"content_type\": payload.content_type, \"body\": payload.body, })"
---
body:
  content:
    post:
      zh_cn:
        content:
          - - tag: text
              text: hello
        title: Lark Title
  msg_type: post
content_type: application/json
